[package]
name = "hyparview"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
  name = "server"
  path = "src/bin/server.rs"

[[bin]]
  name = "client"
  path = "src/bin/client.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7.10", features = ["full"] }
tokio-stream = { version = "0.1" }
futures = { version = "0.3.0", features = ["thread-pool"]}
bytes = "1.0.0"
