[package]
name = "hyparview"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
  name = "server"
  path = "src/bin/server.rs"

[[bin]]
  name = "cli"
  path = "src/bin/cli.rs"

[dependencies]
bytes = "1.0.0"
clap = { version = "4.2.7", features = ["derive"] }
futures = { version = "0.3.0", features = ["thread-pool"]}
tokio = { version = "1", features = ["full"] }
tokio-stream = { version = "0.1" }
tokio-util = { version = "0.7.10", features = ["full"] }
rand = "0.8.4"
