[package]
name = "hyparview"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
  name = "server"
  path = "src/bin/server.rs"

[[bin]]
  name = "cli"
  path = "src/bin/cli.rs"

[dependencies]
bytes = "1.0.0"
clap = { version = "4.2.7", features = ["derive"] }
futures = { version = "0.3.0", features = ["thread-pool"]}
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
tokio-uds = "0.2.7"
rand = "0.8.4"
serde = { version = "~1", features = ["derive"] }
serde_cbor = "0.11.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3.1", default-features = false, features = ["fmt", "ansi", "env-filter", "tracing-log"] }
